--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,5 +3,5 @@
 <title><%= data.title %> - Movie Site</title>
 
 <h1><%= data.title %></h1>
-<p><%= data.description %</p>
+<p><%= data.description %></p>
 <p><a href="/">back to list</a></p>
