--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,4 +4,5 @@
 
 <h1><%= data.title %></h1>
 <p><%= data.description %></p>
-<p><a href="/">back to list</a></p>
+
+<p><a href="/loggedin">SUBMIT</a></p>
