--- a/views/loggedin.ejs
+++ b/views/loggedin.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<title><%= data.title %> - Movie Site</title>
+<title><%= data.title %> - Logged in</title>
 
 <h1><%= data.title %> - Je bent ingelogd</h1>
 <p><%= data.description %></p>
