--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<title><%= data.title %> - Movie Site</title>
+<title><%= data.title %> - Log in Scherm</title>
 
 <h1><%= data.title %></h1>
 <p><%= data.description %></p>
